--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,63 @@ h1, h2, h3, h4, h5, h6  {
     text-align: center;
 }
 
+.card {
+    background: #FFF;
+    padding: 1rem;
+}
+
+.bg-dark {
+    background: var(--dark-color);
+    color: #FFF;
+}
+
+.bg-primary {
+    background: var(--primary-color);
+    color: #FFF;
+}
+
+.bg-secondary {
+    background: var(--secondary-color);
+    color: #FFF;
+}
+
+.bg-dark h1,
+.bg-dark h2,
+.bg-dark h3,
+.bg-dark a,
+.bg-primary h1,
+.bg-primary h2,
+.bg-primary h3,
+.bg-primary a,
+.bg-secondary h1,
+.bg-secondary h2,
+.bg-secondary h3,
+.bg-secondary a {
+    color: #FFF;
+}
+
+
+.py-1 {
+    padding: 1.5rem 0;
+}
+
+.py-2 {
+    padding: 2rem 0;
+}
+.py-3 {
+    padding: 3rem 0;
+}
+
+.p{
+    padding: 1.5rem;
+}
+
+.p2{
+    padding: 2rem;
+}
+.p3 {
+    padding: 3rem;
+}
 /* navigation */
 
 #main-nav {
@@ -189,4 +246,24 @@ h1, h2, h3, h4, h5, h6  {
 
 #showcase .showcase-content p {
     margin-bottom: 1rem;
+}
+
+/* home articles */
+
+#home-articles .articles-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+}
+
+#home-articles .articles-container > *:first-child, #home-articles .articles-container > *:last-child  {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 1rem;
+    grid-column: 1 / span 2;
+    align-items: center;
+}
+
+#home-articles .articles-container > *:last-child {
+    grid-column: 2 / span 2;
 }
